nginx-ingress/ingress-controller/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  labels:
    k8s-app: nginx-ingress-controller
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  selector:
    k8s-app: nginx-ingress-controller
  type: NodePort
