nginx-ingress/ingress-controller/gke-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
  labels:
    k8s-app: nginx-ingress-controller
  name: nginx-ingress-controller
spec:
  backend:
    serviceName: nginx-ingress-controller
    servicePort: 80
  tls:
  - secretName: nginx-ingress-controller-selfsigned
